tests/functions/valid/forward_decl.amu
s32 foo();

main :: () -> s32 {
    return foo();
}

s32 foo() {
    return 3;
}