tests/functions/invalid/redefine_function.amu
s32 foo(){
    return 3;
}

main() : s32 {
    return foo();
}

s32 foo(){
    return 4;
}